Made it return a path